사인 저장방식 변경